:bug: Add alignment center to navbar
Fix alint-items nav

--- a/src/components/ui/Header/Header.module.css
+++ b/src/components/ui/Header/Header.module.css
@@ -1,7 +1,7 @@
 .root {
 }
 .headerWrapper {
-	@apply flex flex-nowrap justify-between py-3;
+	@apply flex flex-nowrap justify-between items-center py-3;
 }
 
 /* Logo */
